fix(compose): change image tags

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   kafka:
-    image: bitnami/kafka:latest
+    image: bitnamilegacy/kafka:3.7
     container_name: kafka
     hostname: kafka
     environment:
@@ -20,7 +20,7 @@ services:
       - "9092:9092"
 
   spark-master:
-    image: bitnami/spark:3.5.1
+    image: bitnamilegacy/spark:3.5.1
     container_name: spark-master
     ports:
       - "8088:8080"
@@ -33,7 +33,7 @@ services:
       - ./scripts/defect_detection.py:/opt/bitnami/spark/scripts/defect_detection.py
 
   spark-worker:
-    image: bitnami/spark:3.5.1
+    image: bitnamilegacy/spark:3.5.1
     container_name: spark-worker
     depends_on:
       - spark-master
